--- a/web_file/index.html
+++ b/web_file/index.html
@@ -173,23 +173,25 @@
     </main>
 
     <footer>
-        <div class="footer_contener">
-            <div class="contect_text_part">
-                <h1 class="contect_title">Lets Connect...</h1>
-                <p class="contect_dec">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-                <div class="social_icon">
+        <!-- contect section -->
+        <div class="contect_contener">
+            <div>
+                <h3 class="section_title">Let's Connect..</h3>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div class="icon">
                     <a href="http://"> <i class='bx bxl-facebook'></i> </a>
-                    <a href="http://"> <i class='bx bxl-github'></i> </a>
                     <a href="http://"> <i class='bx bxl-twitter'></i> </a>
+                    <a href="http://"> <i class='bx bxl-instagram-alt'></i> </a>
                 </div>
-
             </div>
-            <div class="message_form_part">
-                <h1 class="contect_title">Let's Message me...</h1>
-                <input type="text" class="input_name" placeholder="your name">
-                <input type="emaill" class="input_email" placeholder="your email">
-                <input type="textaria" class="input_message" placeholder="your message">
-
+            <div>
+                <h3 class="section_title">Let's Message me..</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your name">
+                    <input type="email" name="" id="" placeholder="Your email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
+                    <button class="btn_primary" type="submit"> Submit </button>
+                </form>
             </div>
         </div>
     </footer>
